--- a/css/styles.css
+++ b/css/styles.css
@@ -22,3 +22,35 @@
   text-align: center;
   padding: 50px 0;
 }
+
+#hero-content h1 {
+  font-family: "Raleway", sans-serif;
+  color: white;
+  text-transform: uppercase;
+  font-size: 50px;
+  margin: 0;
+}
+
+#hero-content p {
+  color: white;
+  text-transform: uppercase;
+  font-size: 24px;
+  font-weight: 300;
+  margin-bottom: 32px;
+}
+
+#hero-content a {
+  display: inline-block;
+  text-decoration: none;
+  background-color: rgb(255, 251, 0);
+  padding: 12px 24px;
+  color: black;
+  font-size: 24px;
+  font-weight: 700;
+  border-radius: 8px;
+  box-shadow: 2px 4px 8px rgb(68, 68, 68);
+}
+
+#hero-content a:hover {
+  background-color: rgb(237, 235, 110);
+}
