--- a/css/styles.css
+++ b/css/styles.css
@@ -54,3 +54,62 @@
 #hero-content a:hover {
   background-color: rgb(237, 235, 110);
 }
+
+/* -----------------------
+        HIGHLIGHTS SECTION
+----------------------- */
+#highlights {
+  background-color: rgb(101, 101, 55);
+  color: white;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  text-transform: uppercase;
+  height: 500px;
+}
+
+#highlights h2 {
+  margin: 60px 0;
+  font-size: 2rem;
+  letter-spacing: 8px;
+}
+
+.highlights-gallery {
+  display: flex;
+  width: 90%;
+  justify-content: center;
+  gap: 30px;
+  flex-wrap: wrap;
+}
+
+.highlights-gallery-item {
+  width: 450px;
+  height: 200px;
+  text-align: center;
+  transition: all 0.3s ease-in-out;
+}
+
+.highlights-gallery-item:hover {
+  transform: scale(1.05);
+}
+
+.highlights-img-container {
+  width: 100%;
+  height: 100%;
+  border-radius: 10px;
+  overflow: hidden;
+  box-shadow: 2px 4px 8px rgb(68, 68, 68);
+}
+
+.highlights-img {
+  height: 100%;
+  width: 100%;
+}
+
+.highlights-gallery-item p {
+  color: #ccc;
+}
+
+.highlights-gallery-item p > span {
+  color: rgb(255, 251, 0);
+}
