--- a/css/styles.css
+++ b/css/styles.css
@@ -65,7 +65,8 @@
   flex-direction: column;
   align-items: center;
   text-transform: uppercase;
-  height: 500px;
+  /* height: 500px; */
+  padding-bottom: 100px;
 }
 
 #highlights h2 {
