--- a/css/destinations.css
+++ b/css/destinations.css
@@ -10,7 +10,59 @@ header {
 /* -----------------------
         DESTINATION CARDS SECTION
 ----------------------- */
-main li img {
+#destinations ul {
+  width: 80%;
+  margin: 0 auto;
+
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  gap: 20px;
+  padding-bottom: 50px;
+}
+
+#destinations li {
+  background-color: white;
+  display: flex;
+  gap: 30px;
+  box-shadow: 1px 1px 8px rgba(255, 255, 255, 0.5);
+  border-radius: 6px;
+  overflow: hidden;
+}
+
+#destinations li:nth-of-type(3) {
+  grid-column: 1 / -1;
+}
+
+#destinations li img {
   width: 300px;
   height: 280px;
+  object-fit: cover;
+}
+
+.item-content {
+  padding: 24px;
+  padding-left: 0;
+  color: #333;
+  position: relative;
+}
+
+.item-content > .actions {
+  position: absolute;
+  bottom: 20px;
+  right: 30px;
+}
+
+.actions a {
+  font-size: 20px;
+  color: #e76f51;
+  font-weight: 700;
+  transition: all 0.3s ease-in-out;
+  padding: 8px;
+}
+
+.actions a:hover {
+  transform: translateY(10%);
+  background-color: #eed8c6;
+  color: #333;
+  border-radius: 5px;
 }
